[gd_scene load_steps=10 format=3 uid="uid://b3w1wry8n3hp7"]

[ext_resource type="Script" path="res://Scenes/NPC/NPC_Controller.gd" id="1_pg5wu"]
[ext_resource type="Script" path="res://Scripts/FSM/FSM_NPC/NPC_StateMachine.gd" id="2_0lko8"]
[ext_resource type="Script" path="res://Scripts/FSM/FSM_NPC/NPC_idle.gd" id="3_7ty13"]
[ext_resource type="Script" path="res://Scripts/FSM/FSM_NPC/NPC_chase_player.gd" id="4_2jhgv"]
[ext_resource type="Script" path="res://Scripts/FSM/FSM_NPC/NPC_find_player.gd" id="5_8c5cw"]
[ext_resource type="Script" path="res://Scripts/FSM/FSM_NPC/NPC_look_around.gd" id="6_r7ler"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xinc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7wprj"]

[sub_resource type="PrismMesh" id="PrismMesh_ua31g"]

[node name="NPC" type="CharacterBody3D" groups=["NPC"]]
script = ExtResource("1_pg5wu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0xinc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_7wprj")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, -1.66816e-08, -1, 0, 0.38163, -4.37114e-08, 0.00941813, 1.44421, 0.215668)
mesh = SubResource("PrismMesh_ua31g")

[node name="NPC_StateMachine" type="Node" parent="." node_paths=PackedStringArray("npc")]
script = ExtResource("2_0lko8")
npc = NodePath("..")

[node name="NPC_idle" type="Node" parent="NPC_StateMachine"]
script = ExtResource("3_7ty13")

[node name="NPC_chase_player" type="Node" parent="NPC_StateMachine"]
script = ExtResource("4_2jhgv")

[node name="NPC_find_player" type="Node" parent="NPC_StateMachine"]
script = ExtResource("5_8c5cw")

[node name="NPC_look_around" type="Node" parent="NPC_StateMachine"]
script = ExtResource("6_r7ler")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.0
path_height_offset = 0.5

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.41501, 0)
target_position = Vector3(7, -0.1, 0)
collision_mask = 3
debug_shape_custom_color = Color(0.803922, 0.231373, 0.45098, 1)
debug_shape_thickness = 5

[node name="RayCast3D2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.40895, 0)
target_position = Vector3(7, -0.1, 0)
collision_mask = 3
debug_shape_custom_color = Color(0.803922, 0.231373, 0.45098, 1)
debug_shape_thickness = 5

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
